<resources>
    <string name="app_name">Smart Formulas</string>
    <string name="login">LOG IN</string>
    <string name="email">Enter your email address</string>
    <string name="password">Enter Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Don\'t have account? Register now</string>
    <string name="logout">logout</string>
    <string name="confirm_password">Confirm Password</string>
</resources>